# GPU

./: BF3_framwork.drawio  DPU_flowID.drawio  ETCpipe Streamlining Encrypted Traffic Classification with Advanced DPUGPU Integration(3).docx  ETCpipe Streamlining Encrypted Traffic Classification with Advanced DPUGPU Integration.docx  GPUpipe.drawio  NIDS.drawio  README.md  ResearchMethod.drawio  env.sh  github.sh  hlx中文.docx  infer_model.py  model.onnx  producer  producer&consumer.drawio  start.py  中期.drawio  未命名绘图.drawio  流管理.drawio  现在的框架图.drawio  队列不匹配.drawio
CPU_FE/: CMakeLists.txt  basicfwd.c  basicfwd_base.c  run.sh
FlowManager/: FlowManager.c  Makefile  backup.c  backup325.c  start.sh
Model/BiLSTM/: BiLSTM_att.py
Model/Darknet/: Darknet.py
Model/Deeppacket/: Deeppacket.py
Model/MATEC/: MATEC.py
Model/TSCRNN/: TSCRNN.py
l2fwd-nv/: CMakeLists.txt
l2fwd-nv/include/: common.h  headers.h  pipeline.h
l2fwd-nv/src/: kernel.cu  main.cpp
model/: model.onnx
script/: consumer.py  producer  producer.cpp
src/: data.py  draw.py  image_pixels.txt  mnist_model.onnx
初稿/: ETCpipe Streamlining Encrypted Traffic Classification with Advanced DPUGPU Integration.docx
